feat: MVP-3 approval, notification and state permission